# Team-Pilot

./: README.md
Project-1/: README.md
Project-1/PiRacer Control/: README.md
Project-1/PiRacer-Assemble/: README.md
Project-1/PiRacer-Control/: README.md
Project-1/PiRacer-Setup/: README.md
Project-1/RPi-Setup/: README.md
Project-2/: README.md
Project-2/Battery/: README.md
Project-2/CAN/: README.md
Project-2/CAN/src/: CAN_recv_data.py  CAN_send_data.ino
Project-2/Commonapi-Dbus/: README.md
Project-2/Commonapi-Dbus/DbusData-example/project/: CMakeLists.txt
Project-2/Commonapi-Dbus/DbusData-example/project/fidl/: DbusData.fidl
Project-2/Commonapi-Dbus/DbusData-example/project/src/: DbusDataClient.cpp  DbusDataStubImpl.cpp  DbusDataStubImpl.hpp
Project-2/Commonapi-Dbus/DbusData-example/project/src-gen/v1/commonapi/: DbusData.hpp  DbusDataDBusDeployment.cpp  DbusDataDBusDeployment.hpp  DbusDataDBusProxy.cpp  DbusDataDBusProxy.hpp  DbusDataDBusStubAdapter.cpp  DbusDataDBusStubAdapter.hpp  DbusDataProxy.hpp  DbusDataProxyBase.hpp  DbusDataStub.hpp  DbusDataStubDefault.cpp  DbusDataStubDefault.hpp
Project-2/Commonapi-Dbus/HelloWorld-example/project-fidl-gen-test/: CMakeLists.txt
Project-2/Commonapi-Dbus/IPC-example/project/: CMakeLists.txt
Project-2/Commonapi-Dbus/IPC-example/project/fidl/: Ipc.fidl
Project-2/Commonapi-Dbus/IPC-example/project/src/: IpcClient.cpp  IpcStubImpl.hpp  defs.h  ina219.h
Project-2/Commonapi-Dbus/IPC-example/project/src-gen/v1/commonapi/: Ipc.hpp  IpcDBusDeployment.cpp  IpcDBusDeployment.hpp  IpcDBusProxy.cpp  IpcDBusProxy.hpp  IpcDBusStubAdapter.cpp  IpcDBusStubAdapter.hpp  IpcProxy.hpp  IpcProxyBase.hpp  IpcStub.hpp  IpcStubDefault.cpp  IpcStubDefault.hpp
Project-2/Crosscompile/: README.md
Project-2/GUI/: README.md
Project-2/OLED/: README.md
Project-2/QT/quickIC/: Background.qml  InstrumentCluster.qml  datacontroller.cpp  ipcstubimpl.cpp  ipcstubimpl.h  main.cpp  main.qml  qml.qrc  quickIC.pro
Project-2/Sensor/: README.md
Project-2/Sensor/src/: sensor.ino  temperature.ino
Project-3/: README.md
Project-3/Commonapi/: README.md
Project-3/Commonapi/example/: api-test.bb  common-api-c++-dbus_3.2.0.bb  common-api-c++_3.2.0.bb
Project-3/InfotainmentQT/: README.md
Project-3/InfotainmentQT/yoctoIVI/: datacontroller.cpp  main.cpp  main.qml  qml.qrc  yoctoIVI.pro
Project-3/InfotainmentQT/yoctoIVI/HU/: HeadUnit.qml  MiddleBar.qml  MyButton.qml  TopBar.qml  mainHu.qml
Project-3/InfotainmentQT/yoctoIVI/IC/: Cluster.qml  Dial.qml  PDC.qml  RightDial.qml
Project-3/Others/: README.md
Project-3/Others/Auto-start/: qt5-env.bb
Project-3/Others/I2C/: CMakeLists.txt  ina-battery.bb
Project-3/Others/Joystick/: rc_example.py
Project-3/Others/WIFI/: systemd_%.bbappend  wlan.network  wpa-supplicant_%.bbappend  wpa_supplicant-nl80211-wlan0.conf
Project-3/QT/: README.md
Project-3/QT/example/: basic-qt5-image.bb  simple.bb
Project-3/yocto/poky/meta-jacey/: README
Project-3/yocto_basic/: README.md
Project-4/: README.md
Project-4/Camera/: README.md
Project-4/meta-jacey/recipes-bsp/bootfiles/: rpi-config_git.bbappend
Project-4/meta-jacey/recipes-example/ICApp/: icApp.bb
(+949 files in other folders)
